--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -16,7 +16,7 @@
       <div class="well">
         <h2 class="text-center">Pro membership</h2>
         <h4> Sign up for the pro account for $10/month and get access to the community and contact information!</h4>
-        <%= link_to "Sign up with Basic", new_user_registration_path(plan: @pro_plan.id), class: 'btn btn-success brn-lg btn-block' %>
+        <%= link_to "Sign up with Pro", new_user_registration_path(plan: @pro_plan.id), class: 'btn btn-success brn-lg btn-block' %>
       </div>
     </div>
   </div>
